--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
+.idea/.gitignore
+.idea/Estudos_REDES_NEURAIS_MULTICAMADA.iml
+.idea/inspectionProfiles/
+.idea/misc.xml
+.idea/modules.xml
+.idea/sonarlint/
+.idea/vcs.xml
